# elf_packer

./: CMakeLists.txt  README.md  test
include/: packer.h
src/: dump.c  extract_headers.c  main.c  section.c  stub.asm  utils.c
